--- a/package.json
+++ b/package.json
@@ -11,20 +11,35 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@devexpress/dx-react-chart": "^2.7.4",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.4",
+    "@devexpress/dx-react-core": "^2.7.4",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.0.0",
     "@types/chai": "^4.2.13",
+    "@types/d3-scale": "^3.2.2",
+    "@types/d3-shape": "^2.0.0",
+    "@types/lodash": "^4.14.168",
     "@types/mocha": "^8.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
+    "lodash": "^4.17.20",
     "prettier": "^2.0.5",
     "snowpack": "^3.0.1",
     "typescript": "^4.0.0"
-  }
+  },
+  "name": "statistics-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "PandeCode <pandeshawnbenjamin@gmail.com>",
+  "license": "MIT"
 }
